# two-coupled-qubits

./: README.md  pyproject.toml
.github/workflows/: analysis.yml  tests.yml
notebooks/: bus_resonator.ipynb  capacitor.ipynb  effective_hamiltonian.ipynb  number_operator.ipynb  resonator_coupling.ipynb
src/two_coupled_qubits/: __init__.py  charge_qubit.py  resonator.py  utils.py
tests/: test_charge_qubit.py  test_resonator.py  test_utils.py
