[tool.poetry]
package-mode = false
name = "2-coupled-qubits"
version = "0.0.1"
description = "Project to simulate the interactiong between two coupled qubits and study the interaction of non-computational levels using QuTiP."
authors = ["Marco Gobbo <marco.gobbo@mib.infn.it>"]
license = "Apache-2.0 License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
scipy = "^1.12.0"
matplotlib = "^3.8.3"
qutip = "^4.7.5"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
